@@ -1,4 +1,4 @@
-Tcl 8.1b1 for Macintosh
+Tcl 8.1b2 for Macintosh
 
 by Ray Johnson
 Scriptics Corporation
@@ -8,7 +8,7 @@ Jim Ingham
 Cygnus Solutions
 jingham@cygnus.com
 
-RCS: @(#) $Id: README,v 1.1.2.3 1998/12/03 02:06:34 welch Exp $
+RCS: @(#) $Id: README,v 1.1.2.4 1999/02/12 00:57:59 stanton Exp $
 
 1. Introduction
 ---------------
@@ -77,7 +77,7 @@ Macintosh Tcl is distributed in three different forms.  This
 should make it easier to only download what you need.  The 
 packages are as follows:
 
-mactk8.1b1.sea.hqx
+mactk8.1b2.sea.hqx
 
     This distribution is a "binary" only release.  It contains an
     installer program that will install a 68k, PowerPC, or Fat
@@ -85,13 +85,13 @@ mactk8.1b1.sea.hqx
     it installs the Tcl & Tk libraries in the Extensions folder inside
     your System Folder.
 
-mactcltk-full-8.1b1.sea.hqx
+mactcltk-full-8.1b2.sea.hqx
 
     This release contains the full release of Tcl and Tk for the
     Macintosh plus the More Files packages which Macintosh Tcl and Tk
     rely on.
 
-mactcl-source-8.1b1.sea.hqx
+mactcl-source-8.1b2.sea.hqx
 
     This release contains the complete source for Tcl 8.1.  In
     addition, Metrowerks CodeWarrior libraries and project files
