@@ -1,10 +1,10 @@
-Tcl 8.1b1 for Windows
+Tcl 8.1b2 for Windows
 
 by Scott Stanton
 Scriptics Corporation
 scott.stanton@scriptics.com
 
-RCS: @(#) $Id: README,v 1.1.2.4 1998/12/11 01:32:14 stanton Exp $
+RCS: @(#) $Id: README,v 1.1.2.5 1999/02/12 00:58:00 stanton Exp $
 
 1. Introduction
 ---------------
